# multiplayer

./: .contain.yaml  .gitignore  Cargo.toml  README.md  server.md
.claude/: settings.local.json
crates/multiplayer-cli/: Cargo.toml
crates/multiplayer-cli/src/: config.rs  lan.rs  main.rs  online.rs  wireguard.rs
crates/multiplayer-server/: Cargo.toml
crates/multiplayer-server/src/: api.rs  auth.rs  db.rs  lib.rs  main.rs  wireguard.rs
crates/multiplayer-server/tests/: api_tests.rs
deploy/: cloud-init.yaml  deploy.sh  multiplayer-server.nginx.conf  multiplayer-server.service
scripts/: build-release.sh
src/: main.rs
