[package]
name = "multiplayer"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "multiplayer"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"
thiserror = "2"
base64 = "0.22"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
url = "2"
