[package]
name = "multiplayer-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "multiplayer-server"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.33", features = ["bundled"] }
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
clap = { version = "4", features = ["derive", "env"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hyper = "1"
